// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMain should correctly render for 404 1`] = `
.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c4 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  background: #FDFDFD;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  padding-bottom: 4rem;
}

@media (min-width:20em) {
  .c4 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin-left: initial;
    margin-right: initial;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (max-width:25em) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (max-width:25em) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80em) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        >
          404
        </span>
        Page cannot be found
      </h1>
      <p
        className="c4"
      >
        Sorry, we're unable to bring you the page you’re looking for. Please try:
      </p>
      <ul>
        <li
          className="c4"
        >
          Double checking the url
        </li>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Searching for this page using the BBC search bar
        </li>
      </ul>
      <p
        className="c4"
      >
        Alternatively, please visit the 
        <a
          className="c5"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </div>
</main>
`;

exports[`ErrorMain should correctly render for 404 for persian 1`] = `
.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c4 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  background: #FDFDFD;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  padding-bottom: 4rem;
}

@media (min-width:20em) {
  .c4 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin-left: initial;
    margin-right: initial;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (max-width:25em) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (max-width:25em) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80em) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        >
          ۴۰۴
        </span>
        این صفحه یافت نشد
      </h1>
      <p
        className="c4"
      >
        متاسفانه به دلیلی این صفحه در دسترس نمی‌باشد. لطفآ این رو امتحان کنید:
      </p>
      <ul>
        <li
          className="c4"
        >
          لینک را چک کنید
        </li>
        <li
          className="c4"
        >
          صفحه را ریفرش کنید
        </li>
        <li
          className="c4"
        >
          با استفاده از نوار جستجوی بی بی سی برای این صفحه جستجو کنید
        </li>
      </ul>
      <p
        className="c4"
      >
        روش دیگر، لطفآ به 
        <a
          className="c5"
          href="https://www.bbc.com/persian"
        >
          صفحه اصلی بی بی سی فارسی
        </a>
         بازدید کنید
      </p>
    </div>
  </div>
</main>
`;

exports[`ErrorMain should correctly render for 500 1`] = `
.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c4 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  background: #FDFDFD;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  padding-bottom: 4rem;
}

@media (min-width:20em) {
  .c4 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin-left: initial;
    margin-right: initial;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (max-width:25em) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (max-width:25em) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80em) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        >
          500
        </span>
        Internal server error
      </h1>
      <p
        className="c4"
      >
        Sorry, we’re currently unable to bring you the page you're looking for. Please try:
      </p>
      <ul>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Coming back again later
        </li>
      </ul>
      <p
        className="c4"
      >
        Alternatively, please visit the 
        <a
          className="c5"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </div>
</main>
`;

exports[`ErrorMain should correctly render for 500 for persian 1`] = `
.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c4 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  background: #FDFDFD;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  padding-bottom: 4rem;
}

@media (min-width:20em) {
  .c4 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin-left: initial;
    margin-right: initial;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (max-width:25em) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (max-width:25em) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80em) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        >
          ۵۰۰
        </span>
        مشکلی پیش آمده است
      </h1>
      <p
        className="c4"
      >
        متاسفانه به دلیلی این صفحه در دسترس نمی‌باشد. لطفآ این رو امتحان کنید:
      </p>
      <ul>
        <li
          className="c4"
        >
          صفحه را ریفرش کنید
        </li>
        <li
          className="c4"
        >
          بعدا برگردید
        </li>
      </ul>
      <p
        className="c4"
      >
        روش دیگر، لطفآ به 
        <a
          className="c5"
          href="https://www.bbc.com/persian"
        >
          صفحه اصلی بی بی سی فارسی
        </a>
         بازدید کنید
      </p>
    </div>
  </div>
</main>
`;

exports[`ErrorMain should correctly render for other status code 1`] = `
.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c4 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
  font-size: 0.9375em;
  line-height: 1.25rem;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
  background: #FDFDFD;
}

.c3 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding-bottom: 0.5rem;
}

.c2 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
  padding: 2.5rem 0 2.5rem 0;
}

.c1 {
  padding-bottom: 4rem;
}

@media (min-width:20em) {
  .c4 {
    font-size: 1em;
    line-height: 1.375rem;
  }
}

@media (max-width:37.4375em) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375em) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80em) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin-left: initial;
    margin-right: initial;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c3 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c2 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c2 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

@media (max-width:25em) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (max-width:25em) {
  .c1 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63em) and (max-width:80em) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80em) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

<main
  role="main"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h1
        className="c2"
      >
        <span
          className="c3"
        >
          500
        </span>
        Internal server error
      </h1>
      <p
        className="c4"
      >
        Sorry, we’re currently unable to bring you the page you're looking for. Please try:
      </p>
      <ul>
        <li
          className="c4"
        >
          Hitting the refresh button in your browser
        </li>
        <li
          className="c4"
        >
          Coming back again later
        </li>
      </ul>
      <p
        className="c4"
      >
        Alternatively, please visit the 
        <a
          className="c5"
          href="https://www.bbc.com/news"
        >
          BBC News homepage.
        </a>
        
      </p>
    </div>
  </div>
</main>
`;
